# flan_t5_small_aot_generated_tokenizer

./: .gitattributes  .gitignore  BUILD_UPGRADE_SUMMARY.md  CHANGELOG.md  CONSENSUS_TEST_REPORT.md  Cargo.toml  FLAN_T5_TOKENIZER_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  INSPO.md  README.md  TOKENIZER_ISSUES.md  build.rs  code.txt  sentencepiece.txt  test_runner.sh
additional/: IMPL.md  OVERVIEW.md
benches/: comprehensive_benchmark.rs  three_way_benchmark.rs  tokenizer_bench.rs
benchmarks/: performance_report_2025-06-20_21-01-58.md  performance_report_2025-06-20_21-25-33.md  performance_report_2025-06-20_21-46-42.md  performance_report_2025-06-20_21-55-26.md  performance_report_2025-06-20_22-01-03.md  performance_report_2025-06-20_22-03-29.md  performance_report_2025-06-20_22-04-23.md
examples/: async_batch_processing.rs  basic_usage.rs  candle_example.rs  check_scores.rs  check_token.rs  debug_viterbi.rs  inspect_tokenizer_json.rs  performance_report.rs  test_flan_t5_tokenizer.rs  three_way_comparison.rs  token_count_test.rs  tokenizer_debug.rs  tokenizer_inspection.rs  trace_tokenization.rs  validate_with_model_data.rs
github/: CI.md
model/: README.md  config.json  validation_results.parquet
src/: batch.rs  candle_integration.rs  error.rs  lib.rs  pool.rs  sentencepiece.rs  tokenizer.rs
tests/: README.md  comprehensive_tokenizer_tests.rs  consensus_tests.rs  cross_process_tests.rs  end_to_end_validation.rs  extreme_tokenizer_tests.rs  huggingface_validation_tests.rs  rust_tokenizers_test.rs  tokenizer_comparison.rs
(+1 files in other folders)
