[package]
name = "flan-t5-tokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
candle-transformers = { version = "0.6", optional = true }
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"
rayon = { version = "1.8", optional = true }
ahash = "0.8"
smallvec = "1.11"
memmap2 = "0.9"
bytemuck = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
chrono = "0.4.41"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rust_tokenizers = "8.1"
tokenizers = "0.21"

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[features]
default = ["parallel"]
parallel = ["rayon"]
candle = ["candle-core", "candle-nn", "candle-transformers"]
cuda = ["candle", "candle-core/cuda"]
metal = ["candle", "candle-core/metal"]
mkl = ["candle", "candle-core/mkl"]
accelerate = ["candle", "candle-core/accelerate"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[[bench]]
name = "tokenizer_bench"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "three_way_benchmark"
harness = false 
